--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ padding-right: 10px; */
 .for-all-drop-down{
 
   margin-top: 36px;
- width: 150px;
+ width: 150px!important;
 
 }
 .o-items i {
@@ -699,7 +699,7 @@ padding-right: 10px; */
     /* border: 1px solid black; */
     border-left: 1px solid black;
 
-    background-color: rgb(221, 223, 225);
+    /* background-color: rgb(221, 223, 225); */
     padding: 5px;
     padding-left: 5px;
     padding-right: 5px;
@@ -1315,6 +1315,7 @@ padding-right: 20px; */
   top: 10px;
   left: 20px;
   padding: 10px;
+  text-align: center;
   /* border-radius: 10px; */
 }
 
